# Kith

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AgentDetail.jsx  ConfigPanel.jsx  ResponsePanel.jsx  ResponseSheet.jsx  Sidebar.jsx  SocietyGraph.jsx
frontend/src/hooks/: useKithSocket.js
kith/: config.py  main.py
kith.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kith/agents/: backend.py  base.py  bedrock_backend.py  caveman.py  openai_backend.py  roles.py
kith/api/: events.py  routes.py
kith/society/: clusters.py  evolution.py  governance.py  historian.py  memory.py  relationships.py  reputation.py  state.py  store.py
kith/swarm/: deliberation.py  mobilization.py  orchestrator.py  retrospective.py  supervision.py
kith/tools/: executor.py  proposer.py  registry.py
tests/: conftest.py  test_smoke.py
